# ResumeTailor

./: .gitignore  README.md  README_TESTS.md  SystemArchitecture.md  Ugo-Omenukwa_David_System_Architecture.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  deployment.yml  terraform.yml  test.yml  vercel.yml
backend/: .gitignore  README.md  app.py  generation.py  github.py  github_auth.py  pyproject.toml  requirements.txt  resume.py  users.py  utils.py
backend/compile-latex/: README.txt  deploy.py  ecr.tf  imagebuilder.tf  lambda.tf  main.py  test.txt
backend/tests/: __init__.py  generation.py  github.py  resume.py  test_github_auth.py  test_github_integration.py  test_keywords.py  test_util.py  users.py
docker/: Dockerfile.latex  latex-compiler.py
frontend/: .codecov.yml  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/__tests__/: LoginPage.test.tsx
frontend/__tests__/components/: navbar.test.tsx
frontend/__tests__/dashboard/: page.test.tsx
frontend/__tests__/integration/: dashboard.integration.test.tsx  login-form.test.tsx  navbar.integration.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/components/: checkout-dialog.tsx  navbar.tsx
frontend/e2e/: github-login.spec.ts
frontend/lib/: auth-context.tsx  get-token.ts  github.ts
frontend/playwright-report/: index.html
frontend/scripts/: test-workflow.js
frontend/tests/: example.spec.ts  latex-sample.ts  login-flow.spec.ts  pricing-page.spec.ts  template-flow.spec.ts
terraform/: backend.tf  elastic_beanstalk.tf
(+30 files in other folders)
