[project]
name = "resume-tailor"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DUOLabs333", email = "dvdugo333@gmail.com"},
]
dependencies = ["supabase>=2.13.0", "flask>=3.1.0", "dotenv>=0.9.9", "pytest>=8.3.5", "pyjwt>=2.10.1", "requests>=2.32.3", "sqlalchemy>=2.0.39", "psycopg2-binary>=2.9.10", "pytest-cov>=6.0.0", "PyGithub>=2.6.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pyright]
extraPaths = ["__pypackages__/3.11/lib/"]

[tool.pytest.ini_options]
addopts = "--ignore=__pypackages__ -x --cov=."
testpaths = ["tests"]
python_files=["*.py"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
omit = ["__pypackages__/*", "utils.py", "*/__init__.py"]
